--- a/webhook/key.env
+++ b/webhook/key.env
@@ -7,6 +7,6 @@
 # See https://developers.facebook.com/docs/messenger-platform/guides/quick-start
 # for more details on where to find your Page Access Token and Verify Token
 PAGE_ACCESS_TOKEN='https://github.com/jojoalm/prorobo/webhook'
-VERIFY_TOKEN="subscribe"
+VERIFY_TOKEN='subscribe'
 
 # note: .env is a shell file so there can't be spaces around '=
